# mercearia-mvc

./: .gitignore  README.md  app.py  pyproject.toml  view.py
controllers/: __init__.py  controllerCargoFuncionario.py  controllerCategoriaFornecedor.py  controllerCategoriaProduto.py  controllerCliente.py  controllerEstoque.py  controllerFornecedor.py  controllerFuncionario.py  controllerProduto.py  controllerVenda.py
daos/: DaoBase.py  DaoCargoFuncionario.py  DaoCategoriaFornecedor.py  DaoCategoriaProduto.py  DaoCliente.py  DaoEstoque.py  DaoFornecedor.py  DaoFuncionario.py  DaoProduto.py  DaoVenda.py  __init__.py
models/: __init__.py  cargoFuncionarioModel.py  categoriaFornecedorModel.py  categoriaProduto.py  clienteModel.py  estoqueModel.py  fornecedorModel.py  funcionarioModel.py  ordemVendaModel.py  pessoaModel.py  produtoModel.py
utils/: __init__.py  mensagens.py
