[tool.poetry]
name = "mercearia"
version = "0.1.0"
description = ""
authors = ["Ricardo-Jackson-Ferrari <ricjferrari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^12.6.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.10.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
